Fix blockquote spacing

--- a/scss/_base_blockquotes.scss
+++ b/scss/_base_blockquotes.scss
@@ -5,14 +5,23 @@
   blockquote {
     border-left: 2px solid $color-mid-dark;
     margin-bottom: $spv-intra--regular;
-    padding-bottom: $spv-intra--regular;
+    margin-left: 0;
+    margin-top: 0;
+    overflow: auto; // include margins of children into it's own height
+    padding-bottom: $spv-intra;
+    padding-left: $sp-large;
 
     & > :last-child {
-      margin-bottom: 0;
+      margin-bottom: $spv-nudge-compensation;
     }
 
     > cite {
       display: block;
+      font-style: normal;
+    }
+
+    > p {
+      font-style: italic;
     }
   }
 }
